--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start:client": "vue-cli-service serve --open"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "eslint-plugin-react": "^7.10.0",
     "vue": "^2.5.16",
