--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "dotenv": "^6.0.0",
     "eslint-plugin-react": "^7.10.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
