--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bulma": "^0.7.1",
     "dotenv": "^6.0.0",
     "eslint-plugin-react": "^7.10.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
