--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.7.1",
     "dotenv": "^6.0.0",
     "eslint-plugin-react": "^7.10.0",
+    "request-promise": "^4.2.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
